Add navigation backend and admin export API